easy-python-app/frontend/k8s-objects/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers: 
      - name: frontend
        image: frontend-microservice:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
            httpGet:
              path: "/app"
              port: http
        readinessProbe:
            httpGet:
              path: "/app"
              port: http
