easy-python-app/frontend/k8s-objects/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: minikube
    http:
      paths:
      - path: "/app/.*"
        backend:
          serviceName: frontend-service
          servicePort: 80
